# rm8

./: .gitignore  Cargo.toml  DEVICES.md  README.md  rm8-0.5.1-win64.7z  rm8-RG353P.json  rm8-RG353V.json  rm8-dvorak.json  rm8-qwerty.json  rm8.json  rustfmt.toml
.github/workflows/: release.yml
rm8-0.5.1-archlinux/: rm8
rm8-0.5.1-win64/: LICENSE  README.md
scripts/: build_linux.sh
src/: app.rs  audio.rs  cli.rs  config.rs  config_command.rs  config_font.rs  config_joystick.rs  config_keycode.rs  config_rgb.rs  display.rs  draw.rs  font.rs  m8.rs  main.rs  menu.rs  menu_tools.rs  nav.rs  nav_item.rs  nav_page.rs  remap.rs  slip.rs  value.rs
